# spinq_qv_sim

./: .gitignore  BUGFIX_NOISE_APPLICATION.md  CHANGELOG.md  EXECUTIVE_SUMMARY.md  LICENSE  NOISE_MODEL_V2_CHANGELOG.md  NOISE_MODEL_V2_IMPLEMENTATION_SUMMARY.md  README.md  Technicalities.md  check_distribution.py  iterative_plan.md  noise_model_improvements.md  pyproject.toml  requirements_cpu.txt  requirements_gpu.txt  test_cuquantum.py  test_noise_fix.py  visualize_heavy_output_behavior.py
.github/: copilot-instructions.md
docs/: campaign_debug_20251017.md  campaign_implementation_summary.md  campaign_plots_by_width_guide.md  campaign_plots_implementation_summary.md  campaign_plots_quick_reference.md  campaign_plotting_guide.md  campaign_system_guide.md  installation.md  iteration10_fixes.md  json_serialization_fix.md  math_foundations.md  width_grouped_plots_implementation.md  width_grouped_plots_visual_guide.md
examples/: CAMPAIGN_README.md  campaign_analyzer.py  campaign_config_generator.py  campaign_executor.py  campaign_plotter.py  demo_campaign_plots.py  run_experimental_campaign.py  run_parameter_campaign.py  test_campaign_system.py
examples/configs/: baseline.yaml  experiments.yaml  production.yaml  (+5 more)
latex/: appendix_qv_campaign.tex  campaign_manifest.json  campaign_results.json  quantum_computing.tex  references.bib
notebooks/: 01_quickstart_qv_experiment.ipynb  02_interactive_campaign.ipynb  03_noise_model_exploration.ipynb  04_sensitivity_analysis.ipynb  05_campaign_monitor.ipynb  circuit_m4_seed42.json  noise_model_showcase.ipynb  tutorial_qv.ipynb
(+62 files in other folders)
