[tool.poetry]
name = "spinq-qv-sim"
version = "0.1.0"
description = "Simulated Quantum Volume benchmarks for Si/SiGe spin qubits — noise-model-first simulator."
authors = ["Alessandro Da Ros <a.da.ros@student.tue.nl>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "spinq_qv", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = ">=1.25.2"
scipy = ">=1.11.1"
pandas = ">=2.2.2"
h5py = ">=3.9.0"
pyarrow = ">=12.0.1"
matplotlib = ">=3.8.1"
pydantic = ">=1.10.11"
pyyaml = ">=6.0"
tqdm = ">=4.66.1"
joblib = ">=1.3.2"
numba = ">=0.59.1"
typing-extensions = ">=4.8.0"

# Optional quantum helper (install via extras)
qiskit-terra = { version = ">=0.46.0", optional = true }

[tool.poetry.extras]
qiskit = ["qiskit-terra"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.2"
black = ">=23.9.1"
flake8 = ">=6.1.0"
mypy = ">=0.991"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"